@@ -1940,6 +1940,14 @@ name|String
 argument_list|,
 name|String
 argument_list|>
+name|tblProps
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
 name|serdeProps
 parameter_list|,
 name|String
@@ -2753,6 +2761,46 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|tblProps
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|prop
+range|:
+name|tblProps
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|tt
+operator|.
+name|putToParameters
+argument_list|(
+name|prop
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|prop
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 if|if
 condition|(
@@ -2806,6 +2854,24 @@ argument_list|,
 name|tt
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|idxProps
+operator|!=
+literal|null
+condition|)
+block|{
+name|indexDesc
+operator|.
+name|getParameters
+argument_list|()
+operator|.
+name|putAll
+argument_list|(
+name|idxProps
+argument_list|)
+expr_stmt|;
+block|}
 name|this
 operator|.
 name|getMSC
