@@ -3279,6 +3279,16 @@ name|String
 argument_list|,
 name|String
 argument_list|>
+name|tblProps
+init|=
+literal|null
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
 name|idxProps
 init|=
 literal|null
@@ -3440,6 +3450,29 @@ name|HiveParser
 operator|.
 name|TOK_TABLEPROPERTIES
 case|:
+name|tblProps
+operator|=
+name|DDLSemanticAnalyzer
+operator|.
+name|getProps
+argument_list|(
+operator|(
+name|ASTNode
+operator|)
+name|child
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|HiveParser
+operator|.
+name|TOK_INDEXPROPERTIES
+case|:
 name|idxProps
 operator|=
 name|DDLSemanticAnalyzer
@@ -3570,6 +3603,8 @@ argument_list|,
 name|location
 argument_list|,
 name|idxProps
+argument_list|,
+name|tblProps
 argument_list|,
 name|shared
 operator|.
