@@ -167,6 +167,8 @@ TOK_EXPLAIN;
 TOK_TABLESERIALIZER;
 TOK_TABLEPROPERTIES;
 TOK_TABLEPROPLIST;
+TOK_INDEXPROPERTIES;
+TOK_INDEXPROPLIST;
 TOK_TABTYPE;
 TOK_LIMIT;
 TOK_TABLEPROPERTY;
@@ -341,16 +343,20 @@ createIndexStatement
       KW_ON KW_TABLE tab=Identifier LPAREN indexedCols=columnNameList RPAREN 
       KW_AS typeName=StringLiteral
       autoRebuild?
+      indexPropertiesPrefixed?
       indexTblName?
       tableRowFormat?
       tableFileFormat?
       tableLocation?
+      tablePropertiesPrefixed?
     ->^(TOK_CREATEINDEX $indexName $typeName $tab $indexedCols 
         autoRebuild?
+        indexPropertiesPrefixed?
         indexTblName?
         tableRowFormat?
         tableFileFormat?
-        tableLocation?)
+        tableLocation?
+        tablePropertiesPrefixed?)
     ;
 
 autoRebuild
@@ -375,10 +381,17 @@ indexPropertiesPrefixed
     ;
 
 indexProperties
-@init { msgs.push("table properties"); }
+@init { msgs.push("index properties"); }
 @after { msgs.pop(); }
     :
-      LPAREN propertiesList RPAREN -> ^(TOK_TABLEPROPERTIES propertiesList)
+      LPAREN indexPropertiesList RPAREN -> ^(TOK_INDEXPROPERTIES indexPropertiesList)
+    ;
+
+indexPropertiesList
+@init { msgs.push("index properties list"); }
+@after { msgs.pop(); }
+    :
+      keyValueProperty (COMMA keyValueProperty)* -> ^(TOK_INDEXPROPLIST keyValueProperty+)
     ;
 
 dropIndexStatement
@@ -593,7 +606,10 @@ alterStatementSuffixClusterbySortby
 alterIndexRebuild
 @init { msgs.push("update index statement");}
 @after {msgs.pop();}
-    : KW_ALTER KW_INDEX indexName=Identifier KW_ON base_table_name=Identifier partitionSpec? KW_REBUILD
+    : KW_ALTER KW_INDEX indexName=Identifier 
+      KW_ON base_table_name=Identifier 
+      partitionSpec?
+      KW_REBUILD
     ->^(TOK_ALTERINDEX_REBUILD $base_table_name $indexName partitionSpec?)
     ;
 
@@ -797,11 +813,11 @@ tableProperties
 @init { msgs.push("table properties"); }
 @after { msgs.pop(); }
     :
-      LPAREN propertiesList RPAREN -> ^(TOK_TABLEPROPERTIES propertiesList)
+      LPAREN tablePropertiesList RPAREN -> ^(TOK_TABLEPROPERTIES tablePropertiesList)
     ;
 
-propertiesList
-@init { msgs.push("properties list"); }
+tablePropertiesList
+@init { msgs.push("table properties list"); }
 @after { msgs.pop(); }
     :
       keyValueProperty (COMMA keyValueProperty)* -> ^(TOK_TABLEPROPLIST keyValueProperty+)
@@ -1844,7 +1860,7 @@ KW_SERDEPROPERTIES: 'SERDEPROPERTIES';
 KW_LIMIT: 'LIMIT';
 KW_SET: 'SET';
 KW_TBLPROPERTIES: 'TBLPROPERTIES';
-KW_IDXPROPERTIES: 'INDEXPROPERTIES';
+KW_IDXPROPERTIES: 'IDXPROPERTIES';
 KW_VALUE_TYPE: '$VALUE$';
 KW_ELEM_TYPE: '$ELEM$';
 KW_CASE: 'CASE';
