@@ -120,6 +120,14 @@ name|String
 argument_list|,
 name|String
 argument_list|>
+name|tblProps
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
 name|serdeProps
 decl_stmt|;
 name|String
@@ -188,6 +196,14 @@ argument_list|,
 name|String
 argument_list|>
 name|idxProps
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|tblProps
 parameter_list|,
 name|String
 name|serde
@@ -290,6 +306,12 @@ operator|.
 name|idxProps
 operator|=
 name|idxProps
+expr_stmt|;
+name|this
+operator|.
+name|tblProps
+operator|=
+name|tblProps
 expr_stmt|;
 name|this
 operator|.
@@ -621,6 +643,40 @@ operator|.
 name|idxProps
 operator|=
 name|idxProps
+expr_stmt|;
+block|}
+specifier|public
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|getTblProps
+parameter_list|()
+block|{
+return|return
+name|tblProps
+return|;
+block|}
+specifier|public
+name|void
+name|setTblProps
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|tblProps
+parameter_list|)
+block|{
+name|this
+operator|.
+name|tblProps
+operator|=
+name|tblProps
 expr_stmt|;
 block|}
 specifier|public
