@@ -4,6 +4,8 @@ drop index src_index_4 on src;
 drop index src_index_5 on src;
 drop index src_index_6 on src;
 drop index src_index_7 on src;
+drop index src_index_8 on src;
+drop index src_index_9 on src;
 
 create index src_index_2 on table src(key) as 'compact' WITH DEFERRED REBUILD;
 desc extended default__src_src_index_2__;
@@ -23,11 +25,19 @@ desc extended default__src_src_index_6__;
 create index src_index_7 on table src(key) as 'compact' WITH DEFERRED REBUILD in table src_idx_src_index_7 STORED AS RCFILE; 
 desc extended src_idx_src_index_7;
 
+create index src_index_8 on table src(key) as 'compact' WITH DEFERRED REBUILD IDXPROPERTIES ("prop1"="val1", "prop2"="val2"); 
+desc extended default__src_src_index_8__;
+
+create index src_index_9 on table src(key) as 'compact' WITH DEFERRED REBUILD TBLPROPERTIES ("prop1"="val1", "prop2"="val2"); 
+desc extended default__src_src_index_9__;
+
 drop index src_index_2 on src;
 drop index src_index_3 on src;
 drop index src_index_4 on src;
 drop index src_index_5 on src;
 drop index src_index_6 on src;
 drop index src_index_7 on src;
+drop index src_index_8 on src;
+drop index src_index_9 on src;
 
 show tables;
